# VulkanTools

./: 000_update_externals.bat  001_visual_studio.bat  CMakeLists.txt  Makefile  README.md  REBASE_ALL.sh  RUN_DEVSIM2.bat  RUN_DEVSIM_TEST.bat  RUN_DEVSIM_TEST.sh
layermgr/: CMakeLists.txt  active_layers_widget.cpp  active_layers_widget.h  layer_info.json  layer_locations_widget.cpp  layer_locations_widget.h  layer_manager.cpp  layer_manager.h  layer_manifest.cpp  layer_manifest.h  layer_settings_widget.cpp  layer_settings_widget.h  override_settings.cpp  override_settings.h
layersvt/: CMakeLists.txt  api_dump.h
scripts/: helper_file_generator.py  lvl_genvk.py  vktrace_file_generator.py
tests/: layer_validation_tests.cpp
via/: via.cpp
vktrace/: TODO.md
vktrace/vktrace_common/: vktrace_trace_packet_identifiers.h
